Fix outline contrast

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ html {
   border-bottom-color: #fff;
 }
 
+.outline-color:focus {
+  outline: 2px solid #39ff14;
+}
+
 .banner {
   min-height: 16em;
   color: #fff;
